// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`если есть автопродляемое размещение, оно активно и у пользователя нет привязанных карт правильно рисует компонент 1`] = `
<Connect(InfoBubbleDumb)
  className="PlacementAutoProlongationWalletNotice "
  cookieSettings={
    Object {
      "expires": 1825,
      "name": "placement-auto-prolongation-message_wallet",
    }
  }
  metrikaParams="7days-placement,wallet-refill,hide,from-lk"
  title="Проверьте кошелёк"
  withCloser={true}
>
  <div>
    <span>
      Если в кошельке недостаточно денег для продления, объявления будут сняты в конце их срока действия. 
    </span>
    <Link
      onClick={[Function]}
      target="_blank"
      url="link/dealers/?section=profi"
    >
      Подробнее
    </Link>
  </div>
  <Button
    className="PlacementAutoProlongationWalletNotice__button"
    color="blue"
    onClick={[Function]}
    size="m"
    type="link"
    url="link/my-wallet/?"
    width="default"
  >
    Пополнить кошелёк
  </Button>
</Connect(InfoBubbleDumb)>
`;

exports[`правильно рисует компонент для мобилки 1`] = `
<Connect(InfoBubbleDumb)
  className="PlacementAutoProlongationWalletNotice "
  cookieSettings={
    Object {
      "expires": 1825,
      "name": "placement-auto-prolongation-message_wallet",
    }
  }
  metrikaParams="7days-placement,wallet-refill,hide,from-lk"
  title="Проверьте кошелёк"
  withCloser={true}
>
  <div>
    <span>
      Если в кошельке недостаточно денег для продления, объявления будут сняты в конце их срока действия. 
    </span>
    <Link
      onClick={[Function]}
      target="_blank"
      url="link/dealer/?section=profi"
    >
      Подробнее
    </Link>
  </div>
  <Button
    className="PlacementAutoProlongationWalletNotice__button"
    color="blue"
    onClick={[Function]}
    size="m"
    type="link"
    url="link/my-wallet/?"
    width="full"
  >
    Пополнить кошелёк
  </Button>
</Connect(InfoBubbleDumb)>
`;
